--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        jcenter() { url 'http://jcenter.bintray.com/' }
+        maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven { url 'https://jitpack.io' }
         
     }
     dependencies {
@@ -17,7 +19,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+//        jcenter()
         jcenter() { url 'http://jcenter.bintray.com/' }
         maven { url 'https://dl.bintray.com/umsdk/release' }
         maven { url 'https://jitpack.io' }
